--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 streamlit==1.15.2
-librosa==0.9.2
-matplotlib==3.6.2
 stability-sdk==0.3.0
-#pyaudio # install with conda (v. 0.2.11)
-# pyyaml # install with conda (v. unk)
+pyaudio==0.2.11 # install with conda (v. 0.2.11)
+pyyaml # install with conda (v. unk)
