--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit==1.15.2
 stability-sdk==0.3.0
-pyaudio==0.2.11 # install with conda (v. 0.2.11)
+PyAudio-0.2.11-cp37-cp37m-win_amd64.whl # install with conda (v. 0.2.11)
 pyyaml # install with conda (v. unk)
