add protobuf 3.19.5 to yml file

--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: streamlit-conda-minimal
 channels:
   - conda-forge
 dependencies:
+  - protobuf==3.19.5
   - pyaudio==0.2.11
   - pyyaml
   - pip
