--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,6 @@ dependencies:
   - pyyaml
   - pip
   - pip:
-    - -I protobuf==3.19.5
+    - pip install -I protobuf==3.19.5
     - streamlit==1.15.2
     - stability-sdk==0.3.0
