modify .yml file

--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - pyyaml
   - pip
   - pip:
-    - pip install -I protobuf==3.19.5
+    - pip uninstall protobuf
+    - protobuf==3.19.5
     - streamlit==1.15.2
     - stability-sdk==0.3.0
